--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Hi。宝贝！</title>
-    <link rel="icon" href="https://wx2.sinaimg.cn/mw690/4d227521ly1fcoq8d7jpzj200g00g743.jpg">
+    <title>Hi，瑄宝～</title>
+    <link rel="icon" href="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fcbu01.alicdn.com%2Fimg%2Fibank%2FO1CN01MNJHep1ykdWimOtEZ_%21%212213771226617-0-cib.220x220.jpg&refer=http%3A%2F%2Fcbu01.alicdn.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1666707905&t=329908dd3b8a32983b3941bda4cd511b">
 </head>
 
 <body>
